SDM-2649: Moved TestConfig under config package and fixed testclass.name property values of @SpringBootTest test classes.